--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.6.0",
     "d3-delaunay": "^5.3.0",
+    "papaparse": "^5.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
+    "react-papaparse": "^3.12.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.16.9"
